--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ log
 .env
 .env.*
 data/
+upload/
 
 # Puppet WhatsApp Auth Folder
 # TODO: remove this after https://github.com/wechaty/puppet-whatsapp/issues/350 has been fixed
