--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wechaty-getting-started",
-  "version": "1.18.7",
+  "version": "1.18.8",
   "description": "Wechaty conversational SDK getting start template & examples",
   "type": "module",
   "engines": {
@@ -12,6 +12,8 @@
     "lint": "eslint \"examples/*.ts\" \"tests/*.ts\"",
     "postinstall": "check-node-version --node \">=16\" --npm \">=7\"",
     "cqrs": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" node examples/cqrs/ding-dong-bot.ts ",
+    "rgyzxtz": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" node examples/rgyzxtz.ts",
+    "rgyzxtz:padlocal": "cross-env WECHATY_PUPPET=wechaty-puppet-padlocal npm run rgyzxtz",
     "start": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" node examples/ding-dong-bot.ts",
     "start:js": "node examples/ding-dong-bot.js",
     "start:walnut": "cross-env WECHATY_LOG=verbose WECHATY_PUPPET=wechaty-puppet-walnut npm start",
@@ -19,6 +21,7 @@
     "start:wechat:web": "cross-env WECHATY_LOG=verbose WECHATY_PUPPET=wechaty-puppet-wechat npm start",
     "start:wechat:padlocal": "cross-env WECHATY_LOG=verbose WECHATY_PUPPET=wechaty-puppet-padlocal npm start",
     "start:whatsapp:web": "cross-env WECHATY_LOG=verbose WECHATY_PUPPET=wechaty-puppet-whatsapp npm start",
+    "test:cmds": "jest",
     "test": "npm-run-all lint test:smoke",
     "test:smoke": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" tap \"tests/**/*.spec.ts\""
   },
@@ -34,12 +37,27 @@
   },
   "homepage": "https://github.com/wechaty/getting-started#readme",
   "dependencies": {
+    "@types/cron": "^2.0.0",
+    "@types/jest": "^29.1.2",
+    "@types/lodash": "^4.14.191",
+    "@types/punycode": "^2.1.0",
+    "@types/sqlite3": "^3.1.8",
+    "chatgpt-official": "^1.1.3",
+    "cron": "^2.1.0",
     "dotenv": "^16.0.0",
+    "jest": "^29.2.0",
+    "lodash": "^4.17.21",
+    "node-fetch": "^2.6.2",
+    "punycode": "^2.1.1",
+    "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
+    "sqlite3": "^5.1.2",
+    "ts-jest": "^29.0.3",
     "wechaty": "^1.18.1",
     "wechaty-cqrs": "^0.7.5",
     "wechaty-plugin-contrib": "^1.11.1",
     "wechaty-puppet-oicq": "^1.10.2",
+    "wechaty-puppet-padlocal": "^1.20.1",
     "wechaty-puppet-walnut": "^1.11.6",
     "wechaty-puppet-wechat": "^1.18.1",
     "wechaty-puppet-wechat4u": "~1.11.1",
@@ -50,6 +68,9 @@
     "@chatie/eslint-config": "^1.0.4",
     "@chatie/git-scripts": "^0.6.2",
     "@chatie/tsconfig": "^4.6.3",
+    "@types/node-fetch": "^2.6.2",
+    "@types/qrcode": "^1.5.0",
+    "@types/qrcode-terminal": "^0.12.0",
     "check-node-version": "^4.2.1",
     "is-pr": "^2.0.0",
     "ts-node": "^10.9.1",
