--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "postinstall": "check-node-version --node \">=16\" --npm \">=7\"",
     "cqrs": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" node examples/cqrs/ding-dong-bot.ts ",
     "rgyzxtz": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" node examples/rgyzxtz.ts",
-    "rgyzxtz:padlocal": "cross-env WECHATY_PUPPET=wechaty-puppet-padlocal npm run rgyzxtz",
     "start": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" node examples/ding-dong-bot.ts",
     "start:js": "node examples/ding-dong-bot.js",
     "start:walnut": "cross-env WECHATY_LOG=verbose WECHATY_PUPPET=wechaty-puppet-walnut npm start",
@@ -21,7 +20,7 @@
     "start:wechat:web": "cross-env WECHATY_LOG=verbose WECHATY_PUPPET=wechaty-puppet-wechat npm start",
     "start:wechat:padlocal": "cross-env WECHATY_LOG=verbose WECHATY_PUPPET=wechaty-puppet-padlocal npm start",
     "start:whatsapp:web": "cross-env WECHATY_LOG=verbose WECHATY_PUPPET=wechaty-puppet-whatsapp npm start",
-    "test:cmds": "jest",
+    "test:cmds": "cross-env NODE_OPTIONS=\"--experimental-vm-modules\" jest",
     "test": "npm-run-all lint test:smoke",
     "test:smoke": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" tap \"tests/**/*.spec.ts\""
   },
@@ -40,14 +39,18 @@
     "@types/cron": "^2.0.0",
     "@types/jest": "^29.1.2",
     "@types/lodash": "^4.14.191",
+    "@types/node-cron": "^3.0.7",
+    "@types/node-schedule": "^2.1.0",
     "@types/punycode": "^2.1.0",
     "@types/sqlite3": "^3.1.8",
     "chatgpt-official": "^1.1.3",
     "cron": "^2.1.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.3",
     "jest": "^29.2.0",
     "lodash": "^4.17.21",
+    "node-cron": "^3.0.2",
     "node-fetch": "^2.6.2",
+    "node-schedule": "^2.1.1",
     "punycode": "^2.1.1",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
