--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/node-schedule": "^2.1.0",
     "@types/punycode": "^2.1.0",
     "@types/sqlite3": "^3.1.8",
-    "chatgpt-official": "^1.1.3",
+    "chatgpt": "^5.2.2",
     "cron": "^2.1.0",
     "dotenv": "^16.0.3",
     "jest": "^29.2.0",
