--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/cron": "^2.0.0",
     "@types/jest": "^29.1.2",
     "@types/lodash": "^4.14.191",
+    "@types/node": "^18.16.2",
     "@types/node-cron": "^3.0.7",
     "@types/node-schedule": "^2.1.0",
     "@types/punycode": "^2.1.0",
@@ -46,11 +47,14 @@
     "chatgpt": "^5.2.2",
     "cron": "^2.1.0",
     "dotenv": "^16.0.3",
+    "http-proxy-agent": "^5.0.0",
+    "https-proxy-agent": "^5.0.1",
     "jest": "^29.2.0",
     "lodash": "^4.17.21",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.6.2",
     "node-schedule": "^2.1.1",
+    "openai": "^3.2.1",
     "punycode": "^2.1.1",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
